Hotfix-Fix alert message not align

--- a/resources/css/backend/sass/layouts/alert.scss
+++ b/resources/css/backend/sass/layouts/alert.scss
@@ -47,7 +47,7 @@
     left: 50%;
     transform: translateX(-50%);
     height: auto;
-    position: absolute;
+    position: fixed;
     top: 30px;
 
     div[data-notify=container]{
